Fix the spacing in the copied passphrase

--- a/src/components/passphrase/safekeeping/safekeeping.css
+++ b/src/components/passphrase/safekeeping/safekeeping.css
@@ -118,8 +118,8 @@
       padding: 0;
       text-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
       color: rgba(0, 0, 0, 0);
-      font-size: 26px;
-      line-height: 80px;
+      font-size: 0;
+      line-height: 0;
       border: none;
       text-align: center;
       resize: none;
@@ -131,17 +131,22 @@
       & .word {
         padding: 0 5px;
         position: relative;
+        font-size: 26px;
+        margin-top: 23px;
+        display: inline-block;
+        line-height: 30px;
 
         &::after {
           opacity: 0;
           position: absolute;
-          top: 150%;
+          top: 240%;
           left: 50%;
           color: var(--color-grayscale-light);
           font-size: 15px;
           counter-increment: section;
           content: counter(section);
           transition: all ease 400ms;
+          -webkit-user-select: none;
         }
       }
     }
@@ -176,6 +181,78 @@
     & section.actionBar {
       visibility: visible;
       pointer-events: auto;
+    }
+  }
+}
+
+@media (--small-viewport) {
+  .safekeeping {
+    &.revealing-step,
+    &.revealed-step {
+      overflow-y: scroll;
+
+      & > header {
+        height: auto;
+        padding-top: 40px;
+        padding-bottom: 20px;
+
+        & > h2 {
+          padding-bottom: 0;
+        }
+
+        & h5 {
+          margin-top: 20px;
+        }
+      }
+    }
+
+    & section.revealing {
+      height: auto;
+      display: block;
+      padding-bottom: 50px;
+
+      & .tableCell {
+        display: block;
+      }
+
+      & .textarea {
+        height: auto;
+        width: 140px;
+        margin: 0 auto;
+      }
+
+      & .word {
+        display: block !important;
+        clear: both;
+        padding-bottom: 20px !important;
+        margin-top: 10px !important;
+
+        &::after {
+          left: 180px !important;
+          top: auto !important;
+        }
+      }
+    }
+
+    & .bigSlider,
+    & .smallSlider {
+      & label {
+        height: 48px;
+        line-height: 48px;
+      }
+
+      & div span {
+        font-weight: normal;
+        text-indent: 53px;
+      }
+    }
+
+    & .smallSlider label {
+      width: 180px;
+    }
+
+    & .bigSlider label {
+      width: 330px;
     }
   }
 }
